# witchcraft

./: .gitignore  Cargo.toml  LANGUAGE.md  README.md
.github/workflows/: ci.yml  release.yml
crates/grimoire/: Cargo.toml  build.rs
crates/grimoire/src/: main.rs
crates/grimoire/tests/: build.rs
crates/witch/: Cargo.toml  build.rs
crates/witch/src/: main.rs
crates/witch/tests/: cli.rs
crates/witchcraft/: Cargo.toml
crates/witchcraft-codegen/: Cargo.toml
crates/witchcraft-codegen/src/: lib.rs
crates/witchcraft-codegen/tests/: codegen.rs
crates/witchcraft-runtime/: Cargo.toml
crates/witchcraft-runtime/src/: abi.rs  decode.rs  embed.rs  engines.rs  heap.rs  lib.rs  memory.rs  sink.rs  value.rs
crates/witchcraft/src/: ast.rs  decoder.rs  engine.rs  env.rs  error.rs  grammar.rs  interp.rs  ir.rs  lexer.rs  lib.rs  lower.rs  manifest.rs  parser.rs  span.rs  token.rs  typeck.rs  types.rs  value.rs
crates/witchcraft/src/engine/: frontier.rs  llama.rs  mock.rs
crates/witchcraft/tests/: embedding.rs  falsification.rs  familiar.rs  flagship.rs  lang.rs  lower.rs  manifest.rs  memory.rs
docs/: CNAME  LANGUAGE_GUIDE.md  grammar.ebnf  index.html  walkthrough.html
examples/: detective.witch  dungeon_master.witch  frontier_test.witch  host.witch  strict_divine.witch  triage.witch  triage_flagship.witch
examples/manifests/: detective.openai.toml  dungeon.frontier.toml  dungeon.llama.toml  sentiment.openai.toml  triage.cloud.toml  triage.frontier.toml  triage.laptop.toml  triage.llama.toml
openspec/: config.yaml
openspec/changes/add-constrained-list-generation/: design.md  proposal.md  tasks.md
openspec/changes/add-constrained-list-generation/specs/divine-inference/: spec.md
openspec/changes/add-distribution/: proposal.md
openspec/changes/add-embedding-primitive/: proposal.md
openspec/changes/add-familiar-primitive/: design.md
openspec/changes/add-familiar-primitive/specs/bounded-familiar/: spec.md
openspec/changes/add-grimoire-codegen/: design.md  proposal.md  tasks.md
openspec/changes/add-inference-runtime/: design.md  proposal.md  tasks.md
openspec/changes/add-inference-runtime/specs/constrained-decoder/: spec.md
openspec/changes/add-inference-runtime/specs/divine-inference/: spec.md
openspec/changes/add-inference-runtime/specs/inference-runtime/: spec.md
openspec/changes/add-inference-runtime/specs/model-as-value/: spec.md
openspec/changes/add-list-types/: tasks.md
openspec/changes/add-list-types/specs/language-grammar/: spec.md
openspec/changes/add-memory-primitive/: design.md  proposal.md
openspec/changes/add-record-literals/: design.md  tasks.md
openspec/changes/add-record-literals/specs/grimoire-codegen/: spec.md
openspec/changes/add-record-literals/specs/language-grammar/: spec.md
openspec/changes/archive/2026-06-18-add-capability-effects/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-18-add-capability-effects/specs/capability-effects/: spec.md
openspec/changes/archive/2026-06-18-add-distribution/: design.md  tasks.md
openspec/changes/archive/2026-06-18-add-distribution/specs/distribution-packaging/: spec.md
openspec/changes/archive/2026-06-18-add-embedding-primitive/: design.md  tasks.md
openspec/changes/archive/2026-06-18-add-embedding-primitive/specs/typed-embedding/: spec.md
openspec/changes/archive/2026-06-18-add-familiar-primitive/: proposal.md  tasks.md
openspec/changes/archive/2026-06-18-add-grimoire-codegen/: tasks.md
openspec/changes/archive/2026-06-18-add-grimoire-codegen/specs/grimoire-codegen/: spec.md
openspec/changes/archive/2026-06-18-add-memory-primitive/: tasks.md
openspec/changes/archive/2026-06-18-add-memory-primitive/specs/governed-memory/: spec.md
openspec/changes/archive/2026-06-18-bootstrap-language-core/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-18-integrate-triage-flagship/: design.md  tasks.md
openspec/changes/archive/2026-06-19-add-constrained-list-generation/: tasks.md
openspec/changes/archive/2026-06-19-add-list-types/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-add-record-literals/: proposal.md  tasks.md
openspec/changes/archive/2026-06-19-complete-native-compile/: tasks.md
openspec/changes/archive/2026-06-19-enable-dungeon-master-example/: design.md  proposal.md  tasks.md
openspec/changes/archive/2026-06-19-rename-keywords/: design.md  proposal.md  tasks.md
openspec/changes/bootstrap-language-core/: tasks.md
openspec/changes/bootstrap-language-core/specs/constrained-decoder/: spec.md
openspec/changes/bootstrap-language-core/specs/host-runtime/: spec.md
openspec/changes/bootstrap-language-core/specs/language-grammar/: spec.md
openspec/changes/complete-native-compile/: design.md  proposal.md  tasks.md
openspec/changes/enable-dungeon-master-example/: design.md  proposal.md  tasks.md
openspec/changes/enable-dungeon-master-example/specs/cli-toolchain/: spec.md
openspec/changes/integrate-triage-flagship/: proposal.md
openspec/changes/rename-keywords/: tasks.md
openspec/changes/rename-keywords/specs/host-runtime/: spec.md
openspec/changes/rename-keywords/specs/language-grammar/: spec.md
openspec/specs/bounded-familiar/: spec.md
openspec/specs/capability-effects/: spec.md
openspec/specs/cli-toolchain/: spec.md
openspec/specs/constrained-decoder/: spec.md
openspec/specs/distribution-packaging/: spec.md
openspec/specs/divine-inference/: spec.md
openspec/specs/dungeon-master-example/: spec.md
openspec/specs/governed-memory/: spec.md
openspec/specs/grimoire-codegen/: spec.md
openspec/specs/host-runtime/: spec.md
openspec/specs/human-io-boundary/: spec.md
openspec/specs/language-grammar/: spec.md
openspec/specs/list-types/: spec.md
openspec/specs/model-as-value/: spec.md
openspec/specs/record-literals/: spec.md
openspec/specs/triage-flagship/: spec.md
openspec/specs/type-system/: spec.md
openspec/specs/typed-embedding/: spec.md
packaging/homebrew/: witchcraft.rb
scripts/: install.sh
(+15 files in other folders)
