[package]
name = "witch"
description = "The `witch` CLI: check and run Witchcraft (.witch) programs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "witch"
path = "src/main.rs"

[dependencies]
witchcraft = { path = "../witchcraft" }
