[package]
name = "witch"
description = "The `witch` CLI: check and run Witchcraft (.witch) programs."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[[bin]]
name = "witch"
path = "src/main.rs"

[dependencies]
witchcraft = { path = "../witchcraft" }

[features]
# Forward the real-engine features so the CLI can bind needs to local llama.cpp
# or a network frontier provider. The default build stays offline (Mock only).
llama = ["witchcraft/llama"]
frontier = ["witchcraft/frontier"]
